dobble.css
/* ... */
.dbl_whiteblock {
  margin-top: 0px !important;
  border-radius: 8px;
  background: rgba(184, 224, 103, 0.9);
}

#pattern_pile {
  min-width: var(--classic-card-width);
}

.minigame4 #pattern_pile {
  min-width: var(--mobile-minigame3-4-card-width);
}

html {
  background: url("img/background.png");
}

#piles {
  display: inline-flex;
  flex-wrap: wrap;
  column-gap: 5px;
  width: 100%;
  justify-content: center;
}

.dbl_hand_wrap {
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
}

.circularLayout .dbl_hand_wrap {
  position: absolute;
  top: 33%;
  left: 38%;
}

.circularLayout {
  position: relative !important;
  height: 101vh;
  width: 100%;
  display: block !important;
}

.circularLayout .pile-description,
.circularPattern .pile-description {
  justify-content: space-evenly;
  font-size: large;
}

.circularLayout .dbl_whiteblock {
  background: none;
}

/* minigame 3/4 only */
.circularPattern {
  position: absolute;
  top: 33%;
  left: 38%;
  background: none;
}

#players_wrap {
  display: contents;
  flex-wrap: wrap;
}

#read_only_piles {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  gap: 5px;
  justify-content: center;
}

.pile-description {
  display: flex;
  margin-top: 0.5em;
  align-items: center;
}

.pile-description div:not(.dbl_sleep) {
  border-radius: 8px;
  padding: 0px 6px 0px 6px;
  background-color: whitesmoke;
}

.pile-description div:last-child {
  margin-left: auto;
}

.stockitem_selected {
  /*border: 4px solid #876998 ! important;
    /border-radius: 50%;*/
  border: none !important;
  filter: sepia(90%);
}

.stockitem_unselectable {
  cursor: none;
}

.dbl_cards_count_wrapper {
  color: #449715;
  font-size: x-large;
  font-weight: bold;
  display: inline;
}

.dbl_counter_prefix {
  margin-right: -6px;
}

.dbl_card_size {
  width: var(--classic-card-width);
  padding-top: var(--classic-card-width);
}

.minigame5 .dbl_card_size {
  width: var(--minigame5-card-width);
  padding-top: var(--minigame5-card-width);
}

.dbl_read_only .dbl_card_size {
  width: var(--readOnly-card-width);
  padding-top: var(--readOnly-card-width);
}

.minigame5 #pattern_pile {
  display: grid;
  grid-gap: 5px;
  max-width: 100vmin;
  grid-template-columns: repeat(auto-fit, 25vmin);
}

.grid::before {
  content: "";
  width: 0;
  padding-bottom: 100%;
  grid-row: 1 / 1;
  grid-column: 1 / 1;
}

.grid > *:first-child {
  grid-row: 1 / 1;
  grid-column: 1 / 1;
}

.minigame3 .dbl_card_size {
  width: var(--mobile-minigame3-4-card-width);
  padding-top: var(--mobile-minigame3-4-card-width);
}

.minigame4 .dbl_card_size {
  width: var(--mobile-minigame3-4-card-width);
  padding-top: var(--mobile-minigame3-4-card-width);
}

.card {
  border: 2px solid rgb(85, 85, 85);
  border-radius: 50%;
  position: relative;
  background-color: white;
  -moz-box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.4);
  -webkit-box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.4);
  -o-box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.4);
  box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.4);
  filter: progid:DXImageTransform.Microsoft.Shadow(color=#656565, Direction=134, Strength=30);
}

#myhand_wrap .card,
.minigame4 #pattern_pile .card {
  border-style: solid ;
  border-width: 2px;
  border-color: #886a95 !important;
  -moz-box-shadow: 5px 5px 5px 0px rgba(136, 106, 149, 1);
  -webkit-box-shadow: 5px 5px 5px 0px rgba(136, 106, 149, 1);
  -o-box-shadow: 5px 5px 5px 0px rgba(136, 106, 149, 1);
  box-shadow: 5px 5px 5px 0px rgba(136, 106, 149, 1);
  filter: progid:DXImageTransform.Microsoft.Shadow(color=#886a95, Direction=134, Strength=30);
}

.spectatorMode #myhand_wrap {
  display: none;
}

.spectatorMode #dbl_dobble_hand {
  display: none;
}

.gamestate_getReady #piles,
.gamestate_getReady #read_only_piles {
  display: none;
}

.minigame5 .card_selected {
  transform: scale(0.9);
}

/*yellow f7d639 and violet 876998*/
.dbl_empty_card {
  background-color: inherit;
  border-style: dashed !important;
  border-width: 2px;
  border-color: seagreen;
  box-shadow:none !important;
}

.player-board {
  background-color: rgba(184, 224, 103, 0.9);
}

.dbl_roundNb {
  color: #449715;
  text-align: center;
  font-weight: bolder;
  margin-top: 1em;
}

#dbl_dobble_hand {
  background-image: url("img/dobbleguy.png");
  width: 224px;
  height: 255px;
  background-size: 100%;
  position: relative;
  top: 0;
  transition: top 250ms ease-in-out;
  align-self: center;
}

.dbl_hand_eye {
  background-image: url("img/dobbleye.png");
  width: 60px;
  height: 60px;
  background-size: 100%;
  position: absolute;
  top: 118px;
  left: 72px;
}

.dbl_happy {
  top: -50px !important;
}

.dbl_winner {
  box-shadow: 2px 12px 26px 13px greenyellow;
  border-radius: 50%;
}

.dbl_sleep{
  width: 38px;
  height: 23px;
  background: url("img/sleep.png")no-repeat;
  margin-left:5px;
  margin-right:5px;
}

.dbl_cards_icon {
  width: 30px;
  height: 23px;
  background: url("img/handIcon.png");
  display: inline-block;
  vertical-align: middle;
  margin-right: 4px;
}

/* No hand on any phone or tablet. */
@media only screen and (hover: none) and (pointer: coarse) {
  #dbl_dobble_hand {
    display: none;
  }
}

@media only screen and (min-device-width: 768px) {
  .minigame5 #pattern_pile {
    display: grid;
    grid-template-columns: repeat(auto-fit, 25vmin);
    max-width: 100vmin;
  }

  .minigame4 .dbl_card_size,
  .minigame3 .dbl_card_size {
    width: var(--minigame3-card-width);
    padding-top: var(--minigame3-card-width);
  }

  .minigame4 #pattern_pile {
    min-width: var(--minigame3-card-width);
  }
}

.symbol {
  position: absolute;
  background-image: url("./img/cards/symbols.png");
  background-size: 1000%;
  cursor: pointer;
}

.symbol.symbol-00 {
  background-position: 0 0;
}
.symbol.symbol-01 {
  background-position: 11.11% 0;
}
.symbol.symbol-02 {
  background-position: 22.22% 0;
}
.symbol.symbol-03 {
  background-position: 33.33% 0;
}
.symbol.symbol-04 {
  background-position: 44.44% 0;
}
/* ... */

